# src/routes/item.js
@@ -1,0 +1,18 @@
+import express from "express";
+import ItemManager from "../controllers/item";
+import ItemValidation from "../middlewares/validations/itemValidation";
+import { multerUpload } from "../middlewares/multer";
+import { cloudinaryConfig } from "../middlewares/cloudinary";
+import Auth from "../middlewares/auth";
+
+const router = express.Router();
+
+router.use("*", Auth.verifyAuth, cloudinaryConfig);
+router.post(
+  "/",
+  multerUpload,
+  ItemValidation.itemValidator,
+  ItemManager.addItem
+);
+
+export default router;
